# cameron

./: .gitignore  Makefile.am  README  README.in  autogen.sh  configure.ac
cameron/: Makefile.am  cameron-add.vala  cameron-cell-renderers.vala  cameron-config.vala  cameron-download-proxy.vala  cameron-download-view.vala  cameron-downloads.vala  cameron-info-window.vala  cameron-main.vala  cameron-subscription-manager.vala  cameron-subscription-preferences.vala  cameron-subscription-view.vala  cameron-subscription.vala  cameron-window.vala
data/: Makefile.am  cameron.schemas  cameron.ui
po/: LINGUAS  POTFILES.in  POTFILES.skip  sv.po
vapi/: config.vapi
